# camera-backup

./: .gitignore  Cargo.toml  README.md  flake.nix
client/: Cargo.toml
client/src/: args.rs  counted_channel.rs  main.rs  notifier.rs
lib/: Cargo.toml  build.rs
lib/src/: camera_backup.proto  lib.rs
server/: Cargo.toml
server/src/: args.rs  main.rs
src/: args.rs  counted_channel.rs  main.rs  notifier.rs
