[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
walkdir = "2"
anyhow = "1"
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
prost-types = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
